# ImageDescriptor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: auth.py  config.py  http_client.py  main.py
app/api/: routes.py  schemas.py
app/cache/: migrator.py  store.py
app/cache/migrations/: 001_initial.py
app/db/: supabase.py
app/modules/: context.py  describer.py  geocoder.py  landcover.py  mission.py
app/services/: composer.py
app/utils/: circuit_breaker.py  errors.py  logging.py  metrics.py  rate_limit.py  retry.py  timeout.py
docs/: .bkit-memory.json  .pdca-status.json  integration-guide.md
docs/.pdca-snapshots/: snapshot-1772195534826.json
docs/02-design/features/: deployment.design.md
docs/04-report/: deployment.report.md
docs/archive/2026-02/: _INDEX.md
docs/archive/2026-02/deployment/: deployment.analysis.md  deployment.plan.md
docs/archive/2026-02/image-descriptor/: image-descriptor.report.md
sprint-logs/: sprint-2.md  sprint-7.md  sprint-8.md
tests/: conftest.py  test_api.py  test_auth.py  test_batch.py  test_batch_concurrency.py  test_cache_cleanup.py  test_cache_errors.py  test_cache_stats.py  test_circuit_breaker.py  test_circuit_breaker_lock.py  test_circuit_breaker_monotonic.py  test_circuits.py  test_composer.py  test_config.py  test_context.py  test_context_lock.py  test_data_endpoints.py  test_describer.py  test_e2e.py  test_geocoder.py  test_geocoder_lock.py  test_gzip.py  test_health.py  test_http_client.py  test_input_validation.py  test_integration_v1.py  test_jwks_lock.py  test_landcover.py  test_landcover_cache_timeout.py  test_lifespan.py  test_logging.py  test_metrics.py  test_migrator.py  test_mission.py  test_openapi.py  test_rate_limit.py  test_retry.py  test_security.py  test_shutdown.py  test_supabase.py  (+2 more)
