[project]
name = "cognito-descriptor"
version = "0.24.0"
description = "Image Descriptor Service for COGnito - generates rich descriptions for satellite imagery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "google-genai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "supabase>=2.11.0",
    "Pillow>=10.0.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=9.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end test requiring real API keys (.env)"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.4",
]
